<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main_root"
        android:paddingTop="20dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:contentDescription="@null"
            android:visibility="invisible"
            android:src="@mipmap/ms_setting" />

        <TextView
            android:id="@+id/tv_new_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_setting"
            android:layout_alignLeft="@+id/iv_picture"
            android:text="@string/new_material"
            android:textColor="#ffffff"
            android:textSize="29sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="317dp"
            android:layout_height="160dp"
            android:layout_below="@+id/tv_new_material"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@mipmap/home_picture" />

        <LinearLayout
            android:id="@+id/ll_function"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_picture"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_main_function_list"
            android:elevation="4dp"
            android:orientation="vertical"
            android:outlineSpotShadowColor="#38000000"
            android:paddingStart="29dp"
            android:paddingEnd="29dp"
            android:paddingBottom="45dp"
            android:translationZ="4dp">

            <TextView
                android:id="@+id/tv_selected_function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/selected_function"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_function_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/function_list"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/capture"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_main_item"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="35dp"
                    android:src="@mipmap/ms_capture" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="76dp"
                    android:text="@string/capture"
                    android:textColor="#ffc5c5d1"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="9dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="35dp"
                    android:src="@mipmap/home_next_tag" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/dual_capture"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/dp20"
                android:background="@drawable/bg_main_item">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="35dp"
                    android:src="@mipmap/ms_dual_capture" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="76dp"
                    android:text="@string/co_capture"
                    android:textColor="#ffc5c5d1"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="9dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="35dp"
                    android:src="@mipmap/home_next_tag" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/dp20"
                android:background="@drawable/bg_main_item">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="35dp"
                    android:src="@mipmap/ms_edit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="76dp"
                    android:text="@string/edit"
                    android:textColor="#ffc5c5d1"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="9dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="35dp"
                    android:src="@mipmap/home_next_tag" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/dual_draft"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/dp20"
                android:background="@drawable/bg_main_item">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="35dp"
                    android:src="@mipmap/ms_draft" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="76dp"
                    android:text="@string/co_drafts"
                    android:textColor="#ffc5c5d1"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="9dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="35dp"
                    android:src="@mipmap/home_next_tag" />
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/ms_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_function"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="#ffc5c5d1"
            android:textSize="15sp"
            tools:text="1.0.0" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_splash_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main_splash"
        tools:visibility="gone">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="350dp"
            android:contentDescription="@null"
            android:src="@mipmap/logo_splash" />

        <TextView
            android:id="@+id/tv_flash_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="350dp"
            android:gravity="center"
            android:text="MEISHE SDK"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </FrameLayout>

</FrameLayout>